Feat: @squad2 Title e meta description para cada página.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,8 +3,9 @@
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
       xmlns:th="http://www.thymeleaf.org">
 <head>
+    <title>Página inicial - Compartilhamento de experiências</title>
+    <meta name="description" content="Compartilhe suas experiências e tire suas dúvidas sobre o mundo dos condomínios e síndicos.">
     <div th:replace="fragments/head :: header"></div>
-    <title>Index</title>
     <link rel="stylesheet" th:href="@{/css/index.css}">
 </head>
 <body>
