--- a/src/main/resources/templates/signin.html
+++ b/src/main/resources/templates/signin.html
@@ -2,8 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
 <head>
+    <title>Acessar - Compartilhamento de experiências</title>
+    <meta name="description" content="Compartilhe suas experiências e tire suas dúvidas sobre o mundo dos condomínios e síndicos.">
     <div th:replace="fragments/head :: header"></div>
-    <title>Login</title>
     <link rel="stylesheet" th:href="@{css/signuplogin.css}">
 </head>
 <body>
