--- a/src/main/resources/templates/userEdit.html
+++ b/src/main/resources/templates/userEdit.html
@@ -2,8 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
 <head>
+    <title>Edição de usuário - Compartilhamento de experiências</title>
     <div th:replace="fragments/head :: header"></div>
-    <title>Usuário</title>
     <link rel="stylesheet" th:href="@{/css/styles.css}">
     <link rel="stylesheet" th:href="@{/css/userEdit.css}">
     <link rel="stylesheet" th:href="@{/css/modal.css}">
