--- a/src/main/resources/static/css/questionCreate.css
+++ b/src/main/resources/static/css/questionCreate.css
@@ -22,6 +22,10 @@ label{
     width: 170px;
 }
 
+#description {
+    resize: none;
+}
+
 @media (min-width: 320px) and (max-width: 480px) {
 
     .question-create-button{
