--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -64,6 +64,7 @@
                                 <a th:href="@{/user/{id}(id=${question.getUser().getId()})}"
                                    th:text="${question.getUser().getName()}"></a>
                                 <small th:text="${question.getCreatedAtString()}"></small>
+                                <small th:text="${question.getEditedString()}"></small>
                             </div>
                         </div>
                     </div>
