Fix: @matheus @guilherme Fix botao Acessar header mobile

--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -107,7 +107,7 @@ header nav img{
         text-transform: uppercase;
     }
 
-    header nav button{
+    #btn-question {
         display: none;
     }
 
