--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -25,7 +25,7 @@
             </div>
             </div>
             <div sec:authorize="isAuthenticated()">
-                <button onclick="location.href='/question/create'" class="button-green-ease">Perguntar</button>
+                <button onclick="location.href='/question/create'" class="button-green-ease" id="btn-question">Perguntar</button>
             </div>
             <div sec:authorize="isAnonymous()">
                 <button onclick="location.href='/signin'" class="button-green-ease">Acessar</button>
