Correção na 404.html.

--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -11,7 +11,7 @@
 <body>
     <header th:replace="fragments/header.html :: header"></header>
     <div class="error-container">
-        <h1>Ops, essa página não existe!</h1>
+        <h1>Ops, essa página não existe 😢</h1>
     </div>
 </body>
 </html>
